일기 감정/해시태그 수동 수정 API 수정 및 swagger 문서 작성
